--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -11,8 +11,8 @@
         rel="stylesheet">
     <title>Pokedex</title>
 
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="pokeDetail.css">
+    <script src="pokeDetail.js"></script>
 
 
 </head>
@@ -23,7 +23,7 @@
     <div id="pokedex">
         <h1 id="pokemonName"></h1>
 
-
+<div id="here"></div>
     </div>
     <div class="info-container">
         <div>
