background color from API overview

--- a/overview.html
+++ b/overview.html
@@ -7,6 +7,7 @@
     <title>Pokemons</title>
     <link rel="stylesheet" href="overview.css">
     <script src="overview.js"></script>
+    <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
 
 
 
