--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <title>Pokedex</title>
+    <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
 
     <link rel="stylesheet" href="pokeDetail.css">
     <script src="pokeDetail.js"></script>
@@ -53,11 +54,13 @@
             </div>
 
             <div id="inner-4" class="hide">
-                <h3>Best 20 of moves</h3>
+                <h3>Best 30 of moves</h3>
                 <div class="moves-container" id="moves"></div>
             </div>
         </div>
     </div>
+
+
 
 </body>
 
