added hover effect, show all moves, added go back

--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <title>Pokedex</title>
-    
+
     <link rel="stylesheet" href="pokeDetail.css">
     <script src="pokeDetail.js"></script>
 
@@ -22,9 +22,9 @@
 
 
     <div id="pokedex">
+        <a href='overview.html' id="back" class="back">Back to All Pokemons</a>
         <h1 id="pokemonName"></h1>
-
-<div id="here"></div>
+        <div id="here"></div>
     </div>
     <div class="info-container">
         <div>
@@ -54,7 +54,7 @@
             </div>
 
             <div id="inner-4" class="hide">
-                <h3>Best 30 of moves</h3>
+                <h3>All Moves</h3>
                 <div class="moves-container" id="moves"></div>
             </div>
         </div>
