added evo img wrapper

--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -64,7 +64,9 @@
                     </div>
                     <div id="trigger"></div>
                     <div id="species1"></div>
-                    <img class="evolution-img" id="evoImg1">
+                    <div class="evo-img-bg">
+                        <img class="evolution-img" id="evoImg1">
+                    </div>
                 </div>
             </div>
 
