--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -64,7 +64,7 @@
                     </div>
                     <div id="trigger"></div>
                     <div id="species1"></div>
-                    <div class="evo-img-bg">
+                    <div class="evo-img-bg" id="evoImgWrapper">
                         <img class="evolution-img" id="evoImg1">
                     </div>
                 </div>
