fix bug in level up

--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -59,13 +59,24 @@
             <div id="inner-3" class="hide">
                 <div class="info"><b>Evolution Chain</b></div>
                 <div class="evo-wrapper">
-                    <div class="evo-img-bg">
-                        <img class="evolution-img" id="evoImg">
+                    <div class="species-wrapper">
+                        <div class="evo-img-bg">
+                            <img class="evolution-img" id="evoImg">
+                        </div>
+                        <div class="species-name" id="species0"></div>
                     </div>
-                    <div id="trigger"></div>
-                    <div id="species1"></div>
-                    <div class="evo-img-bg" id="evoImgWrapper">
-                        <img class="evolution-img" id="evoImg1">
+                    <div id="evoImgWrapper">
+                        <div class="trigger-wrapper">
+                            <div id="trigger"></div>
+                            <img src="/img/arrow-18-64.png">
+                            <div id="level"></div>
+                        </div>
+                        <div class="species-wrapper">
+                            <div class="evo-img-bg">
+                                <img class="evolution-img" id="evoImg1">
+                            </div>
+                            <div class="species-name" id="species1"></div>
+                        </div>
                     </div>
                 </div>
             </div>
