fixed bug favicon

--- a/pokeDetail.html
+++ b/pokeDetail.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <title>Pokedex</title>
-    <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="pokeDetail.css">
     <script src="pokeDetail.js"></script>
 
@@ -68,7 +68,7 @@
                     <div id="evoImgWrapper">
                         <div class="trigger-wrapper">
                             <div id="trigger"></div>
-                            <img src="/img/arrow-18-64.png">
+                            <img src="img/arrow-18-64.png">
                             <div id="level"></div>
                         </div>
                         <div class="species-wrapper">
